--- a/CustomerCenter/pom.xml
+++ b/CustomerCenter/pom.xml
@@ -21,6 +21,13 @@
 	</properties>
 
 	<dependencies>
+
+		<!-- <dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>9.4.0.jre8</version>
+		</dependency> -->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
