--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -11,11 +11,11 @@ spring:
         - id: customer
           uri: http://localhost:8081
           predicates:
-            - Path=/taxiRequests/** /requestStatuses/**
+            - Path=/taxiRequests/**, /requestStatuses/**
         - id: driver
           uri: http://localhost:8082
           predicates:
-            - Path=/reciepts/** /receiptInfos/**
+            - Path=/reciepts/**, /receiptInfos/**, /api/reciept/**
         - id: payment
           uri: http://localhost:8083
           predicates:
